--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -12,7 +12,7 @@
         android:layout_marginBottom="8dp">
 
         <ImageView
-            android:id="@+id/swarmImage"
+            android:id="@+id/swarmImageMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
@@ -27,7 +27,7 @@
             app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
-            android:id="@+id/timeStampTextView"
+            android:id="@+id/timeStampTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Reported: "
@@ -41,7 +41,7 @@
             tools:layout_constraintLeft_creator="1" />
 
         <TextView
-            android:id="@+id/claimantTextView"
+            android:id="@+id/claimantTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -56,7 +56,7 @@
             tools:layout_constraintRight_creator="1" />
 
         <TextView
-            android:id="@+id/contactTextView"
+            android:id="@+id/contactTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
@@ -71,7 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/claimantTextView" />
 
         <TextView
-            android:id="@+id/sizeTextView"
+            android:id="@+id/sizeTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/primary_text"
@@ -83,10 +83,10 @@
             tools:layout_constraintLeft_creator="1"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/contactTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms" />
 
         <TextView
-            android:id="@+id/accessibilityTextView"
+            android:id="@+id/accessibilityTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -100,7 +100,7 @@
             tools:layout_constraintLeft_creator="1" />
 
         <Button
-            android:id="@+id/cancelSwarmClaimButton"
+            android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
