--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -57,6 +57,8 @@
 
         <TextView
             android:id="@+id/contactTextViewMyReportedSwarms"
+            android:clickable="true"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
