fix margin issues with the claim button on MainActivity. Turns out that I was looking at the wrong xml file.

--- a/app/src/main/res/drawable/recycler_view_divider.xml
+++ b/app/src/main/res/drawable/recycler_view_divider.xml
@@ -3,6 +3,7 @@
         android:shape="rectangle">
         <size
             android:width="8dp"
-            android:height="8dp" />
+            android:height="8dp"
+            />
         <solid android:color="@color/primary_light" />
     </shape>
