--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -3,11 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:layout_marginBottom="8dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingBottom="8dp"
         android:layout_height="match_parent"
         android:layout_marginBottom="8dp">
 
@@ -115,8 +117,9 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
-            app:layout_constraintVertical_bias="0.04000002" />
+             />
 
     </android.support.constraint.ConstraintLayout>
 
