--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_marginBottom="8dp"
+    android:background="@color/colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -11,25 +12,24 @@
         android:layout_width="match_parent"
         android:paddingBottom="8dp"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp">
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:id="@+id/swarmImageMyClaims"
-            android:layout_width="0dp"
+            android:layout_width="257dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
             android:clickable="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/timeStampTextViewMyClaims"
             app:srcCompat="@drawable/bee"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
             android:id="@+id/timeStampTextViewMyClaims"
@@ -38,43 +38,40 @@
             android:text="Reported: "
             android:textSize="20sp"
             android:textColor="@color/primary_text"
-            app:layout_constraintTop_toBottomOf="@+id/swarmImage"
-            app:layout_constraintBottom_toTopOf="@+id/contactReporterTextViewMyClaims"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/swarmImageMyClaims"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/swarmImageMyClaims"
+            android:layout_marginRight="8dp"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <TextView
             android:id="@+id/contactReporterTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Contact Swarm Reporter"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextView"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/timeStampTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/reportedByTextViewMyClaims"/>
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/timeStampTextViewMyClaims"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextViewMyClaims" />
 
         <TextView
             android:id="@+id/reportedByTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Reported by: "
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextView"
-            app:layout_constraintRight_toRightOf="@+id/timeStampTextView"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/contactReporterTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/sizeTextViewMyClaims"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1" />
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/contactReporterTextViewMyClaims"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/contactReporterTextViewMyClaims" />
 
         <TextView
             android:id="@+id/sizeTextViewMyClaims"
@@ -83,47 +80,41 @@
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:text="Size: The size of a __"
-            app:layout_constraintLeft_toLeftOf="@+id/claimantTextView"
-            app:layout_constraintRight_toRightOf="@+id/claimantTextView"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/reportedByTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/accessibilityTextViewMyClaims"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintHorizontal_bias="0.0"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/reportedByTextViewMyClaims"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/reportedByTextViewMyClaims" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:text="Accessibility: __"
-            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyClaims"
-            app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyClaims"
+            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/cancelMyClaimButton"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintHorizontal_bias="0.0" />
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyClaims"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyClaims" />
 
         <Button
             android:id="@+id/cancelMyClaimButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel My Claim"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextView"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyClaims"
+            android:layout_marginRight="0dp"
             android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
-             />
+            app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyClaims"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyClaims" />
 
     </android.support.constraint.ConstraintLayout>
 
