--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -3,120 +3,119 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:layout_marginBottom="8dp"
     android:layout_width="match_parent"
+    android:background="@color/colorPrimary"
     android:layout_height="wrap_content">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp">
+        android:paddingBottom="8dp"
+        android:layout_marginBottom="8dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
 
         <ImageView
             android:id="@+id/swarmImageMyReportedSwarms"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:clickable="true"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/bee"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:srcCompat="@drawable/bee" />
 
         <TextView
             android:id="@+id/timeStampTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="Reported: "
-            android:textSize="20sp"
             android:textColor="@color/primary_text"
-            app:layout_constraintTop_toBottomOf="@+id/swarmImage"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/swarmImageMyReportedSwarms"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
             android:id="@+id/claimantTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:text="Claimed by: hasn't been claimed yet"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextView"
-            app:layout_constraintRight_toRightOf="@+id/timeStampTextView"
-            app:layout_constraintTop_toBottomOf="@+id/timeStampTextView"
-            tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1" />
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/timeStampTextViewMyReportedSwarms"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/timeStampTextViewMyReportedSwarms"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/timeStampTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/contactTextViewMyReportedSwarms"
-            android:clickable="true"
-            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="0dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
+            android:clickable="true"
             android:drawableLeft="@drawable/ic_phone_black_24dp"
             android:text="Call"
-            android:textSize="20sp"
             android:textColor="@color/primary_text"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/claimantTextView" />
+            android:textSize="20sp"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/claimantTextViewMyReportedSwarms"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/claimantTextViewMyReportedSwarms"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/claimantTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/sizeTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="Size: The size of a __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:text="Size: The size of a __"
-            app:layout_constraintLeft_toLeftOf="@+id/claimantTextView"
-            app:layout_constraintRight_toRightOf="@+id/claimantTextView"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1"
-            app:layout_constraintHorizontal_bias="0.0"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms" />
+            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/contactTextViewMyReportedSwarms"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/contactTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:text="Accessibility: __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:text="Accessibility: __"
-            app:layout_constraintLeft_toLeftOf="@+id/sizeTextView"
-            app:layout_constraintRight_toRightOf="@+id/sizeTextView"
-            app:layout_constraintTop_toBottomOf="@+id/sizeTextView"
-            tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/sizeTextViewMyReportedSwarms"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/sizeTextViewMyReportedSwarms"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/sizeTextViewMyReportedSwarms" />
 
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel Claim"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextView"
-            android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextView"
-            android:layout_marginBottom="0dp"
-            app:layout_constraintVertical_bias="0.060000002" />
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyReportedSwarms"
+            android:layout_marginRight="0dp"
+            app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyReportedSwarms" />
 
     </android.support.constraint.ConstraintLayout>
 
