--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -52,7 +52,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="0dp"
             android:layout_marginRight="0dp"
-            android:layout_marginTop="8dp"
             android:ems="10"
             android:hint="Enter your password"
             android:inputType="textPassword"
@@ -60,7 +59,8 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
             app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
-            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
+            android:layout_marginTop="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/switch1"
             app:layout_constraintVertical_bias="0.0" />
 
         <EditText
@@ -104,6 +104,23 @@
             app:layout_constraintLeft_toLeftOf="@+id/emailInputTextView"
             app:layout_constraintRight_toRightOf="@+id/emailInputTextView"
             app:layout_constraintTop_toBottomOf="@+id/emailInputTextView" />
+
+        <Switch
+            android:id="@+id/switch1"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:textColor="?android:textColorHint"
+            android:text="Allow people to call me"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="@+id/phoneNumberTextView"
+            app:layout_constraintRight_toRightOf="@+id/phoneNumberTextView"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNumberTextView"
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
