--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,6 @@
     <color name="icons">#212121</color>
 
     <color name="divider">#BDBDBD</color>
+
+    <color name="hint">#808080</color>
 </resources>
