attach claim_item text to the map instead of the swarm pic and re do constraint layout of my_claim_item

--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -36,12 +36,13 @@
             android:text="Reported: "
             android:textSize="20sp"
             android:textColor="@color/primary_text"
-            app:layout_constraintTop_toBottomOf="@+id/swarmImage"
+            app:layout_constraintTop_toBottomOf="@+id/mapImageView"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             tools:layout_constraintRight_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            android:layout_marginTop="8dp" />
 
         <TextView
             android:id="@+id/claimantTextView"
