--- a/app/src/main/res/layout/my_claim_item.xml
+++ b/app/src/main/res/layout/my_claim_item.xml
@@ -25,10 +25,10 @@
             android:layout_marginEnd="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintHorizontal_bias="0.0" />
 
         <TextView
@@ -40,10 +40,10 @@
             android:textColor="@color/primary_text"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/swarmImageMyClaims"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="@+id/swarmImageMyClaims"
             android:layout_marginRight="8dp"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="parent" />
 
         <TextView
             android:id="@+id/reportedByTextViewMyClaims"
@@ -54,7 +54,6 @@
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/timeStampTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/contactReporterTextViewMyClaims"
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/timeStampTextViewMyClaims"
             android:layout_marginLeft="0dp"
@@ -70,7 +69,6 @@
             android:textSize="20sp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/reportedByTextViewMyClaims"
-            app:layout_constraintBottom_toTopOf="@+id/sizeTextViewMyClaims"
             android:layout_marginRight="0dp"
             app:layout_constraintRight_toRightOf="@+id/reportedByTextViewMyClaims"
             android:layout_marginLeft="0dp"
@@ -81,15 +79,15 @@
             android:id="@+id/sizeTextViewMyClaims"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Size: The size of a __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:text="Size: The size of a __"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/reportedByTextViewMyClaims"
+            app:layout_constraintTop_toBottomOf="@+id/contactReporterTextViewMyClaims"
             android:layout_marginRight="0dp"
-            app:layout_constraintRight_toRightOf="@+id/reportedByTextViewMyClaims"
+            app:layout_constraintRight_toRightOf="@+id/contactReporterTextViewMyClaims"
             android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/reportedByTextViewMyClaims" />
+            app:layout_constraintLeft_toLeftOf="@+id/contactReporterTextViewMyClaims" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyClaims"
@@ -107,18 +105,21 @@
 
         <Button
             android:id="@+id/cancelMyClaimButton"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel My Claim"
+            android:padding="8dp"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyClaims"
-            android:layout_marginRight="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyClaims"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyClaims" />
+            android:layout_marginLeft="8dp"
+            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyClaims"
+            app:layout_constraintHorizontal_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
