--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -16,8 +16,8 @@
 
         <ImageView
             android:id="@+id/swarmImage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="257dp"
+            android:layout_height="0dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
@@ -27,7 +27,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/bee"
             tools:layout_constraintLeft_creator="1"
-            tools:layout_constraintRight_creator="1" />
+            tools:layout_constraintRight_creator="1"
+            app:layout_constraintHorizontal_bias="0.481" />
 
         <TextView
             android:id="@+id/timeStampTextView"
