--- a/app/src/main/res/layout/claim_item.xml
+++ b/app/src/main/res/layout/claim_item.xml
@@ -16,34 +16,37 @@
 
         <ImageView
             android:id="@+id/swarmImage"
-            android:layout_width="257dp"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="0dp"
             android:layout_marginTop="8dp"
             android:clickable="true"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@+id/guideline"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toLeftOf="@+id/guideline"
             app:srcCompat="@drawable/bee"
             tools:layout_constraintLeft_creator="1"
             tools:layout_constraintRight_creator="1"
-            app:layout_constraintHorizontal_bias="0.481" />
+            app:layout_constraintHorizontal_bias="0.415"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/timeStampTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Reported: "
-            android:textSize="20sp"
             android:textColor="@color/primary_text"
-            app:layout_constraintTop_toBottomOf="@+id/mapImageView"
+            android:textSize="20sp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_constraintRight_creator="1"
+            app:layout_constraintTop_toBottomOf="@+id/mapImageView"
             tools:layout_constraintLeft_creator="1"
-            android:layout_marginTop="8dp" />
+            tools:layout_constraintRight_creator="1" />
 
         <TextView
             android:id="@+id/claimantTextView"
@@ -114,20 +117,26 @@
 
         <ImageView
             android:id="@+id/mapImageView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
             android:clickable="true"
-            app:layout_constraintBottom_toBottomOf="@+id/swarmImage"
-            app:layout_constraintLeft_toLeftOf="@+id/guideline"
+            app:layout_constraintBottom_toTopOf="@+id/guideline3"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492"
             app:srcCompat="@drawable/bee"
             android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp" />
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/guideline" />
+
+        <android.support.constraint.Guideline
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline3"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="212dp" />
 
     </android.support.constraint.ConstraintLayout>
 
