--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -64,7 +64,7 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:drawableLeft="@drawable/ic_phone_black_24dp"
-            android:text="Call"
+            android:text=""
             android:textColor="@color/primary_text"
             android:textSize="20sp"
             android:layout_marginTop="8dp"
@@ -105,6 +105,7 @@
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
