make it so that contactTextViewMyReportedSwarms is not visible when a swarm has not been claimed

--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -61,6 +61,7 @@
         <TextView
             android:id="@+id/contactTextViewMyReportedSwarms"
             android:layout_width="0dp"
+            android:visibility="gone"
             android:layout_height="wrap_content"
             android:clickable="true"
             android:drawableLeft="@drawable/ic_phone_black_24dp"
