--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -77,17 +77,17 @@
 
         <TextView
             android:id="@+id/sizeTextViewMyReportedSwarms"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:text="Size: The size of a __"
             android:textColor="@color/primary_text"
             android:textSize="20sp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms"
-            android:layout_marginRight="0dp"
+            app:layout_constraintLeft_toLeftOf="@+id/contactTextViewMyReportedSwarms"
             app:layout_constraintRight_toRightOf="@+id/contactTextViewMyReportedSwarms"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/contactTextViewMyReportedSwarms" />
+            app:layout_constraintTop_toBottomOf="@+id/contactTextViewMyReportedSwarms" />
 
         <TextView
             android:id="@+id/accessibilityTextViewMyReportedSwarms"
