--- a/app/src/main/res/layout/my_reported_claim_item.xml
+++ b/app/src/main/res/layout/my_reported_claim_item.xml
@@ -106,6 +106,21 @@
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent" />
 
+        <TextView
+            android:id="@+id/descriptionTextViewMyReportedSwarms"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/primary_text"
+            android:textSize="20sp"
+            android:text="Description: __"
+            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyReportedSwarms"
+            app:layout_constraintRight_toRightOf="@+id/accessibilityTextViewMyReportedSwarms"
+            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            tools:layout_constraintRight_creator="1"
+            tools:layout_constraintLeft_creator="1" />
+
+
         <Button
             android:id="@+id/cancelSwarmClaimButtonMyReportedSwarms"
             android:layout_width="0dp"
@@ -114,8 +129,8 @@
             android:layout_marginTop="8dp"
             android:background="@drawable/bivouac_button"
             android:text="Cancel Claim"
-            app:layout_constraintLeft_toLeftOf="@+id/accessibilityTextViewMyReportedSwarms"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            app:layout_constraintLeft_toLeftOf="@+id/descriptionTextViewMyReportedSwarms"
+            app:layout_constraintTop_toBottomOf="@+id/descriptionTextViewMyReportedSwarms"
             app:layout_constraintRight_toLeftOf="@+id/guideline2"
             android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -146,7 +161,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@+id/guideline2"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/accessibilityTextViewMyReportedSwarms"
+            app:layout_constraintTop_toBottomOf="@+id/descriptionTextViewMyReportedSwarms"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp" />
 
