add aboutActivity section with link to video, privacy policy, and contact

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="divider">#BDBDBD</color>
 
     <color name="hint">#808080</color>
+
+    <color name="link">#0645AD</color>
 </resources>
