--- a/app/src/main/res/layout/activity_login_gate.xml
+++ b/app/src/main/res/layout/activity_login_gate.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.guest.iamhere.activities.LoginGateActivity">
+    tools:context="com.example.guest.iamhere.activities.LoginGateActivity"
+    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <ImageView
         android:id="@+id/imageView"
@@ -23,11 +25,13 @@
         android:padding="8dp"
         android:text="Log In"
         android:textColor="@color/primary_text"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/gateRegisterButton"
+        app:layout_constraintTop_toTopOf="@+id/guideline4"
+        android:layout_marginTop="0dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
-        app:layout_constraintLeft_toLeftOf="@+id/gateRegisterButton"
-        app:layout_constraintHorizontal_bias="0.597" />
+        app:layout_constraintHorizontal_bias="0.0" />
 
     <Button
         android:id="@+id/gateRegisterButton"
@@ -37,9 +41,30 @@
         android:text="Register New Account"
         android:textColor="@color/primary_text"
         android:padding="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="31dp"
-        android:layout_marginLeft="32dp"
+        app:layout_constraintTop_toBottomOf="@+id/gateLoginButton"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/aboutButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bivouac_button"
+        android:text="About SwarmReporter"
+        android:textColor="@color/primary_text"
+        app:layout_constraintTop_toBottomOf="@+id/gateRegisterButton"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="32dp" />
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="@+id/gateRegisterButton"
+        app:layout_constraintHorizontal_bias="0.0" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline4"
+        app:layout_constraintGuide_begin="370dp"
+        android:orientation="horizontal" />
 </android.support.constraint.ConstraintLayout>
