shorten description prompt in new swarm report activity

--- a/app/src/main/res/layout/activity_new_swarm_report.xml
+++ b/app/src/main/res/layout/activity_new_swarm_report.xml
@@ -141,7 +141,7 @@
             android:textColor="@color/primary_text"
             android:gravity="center"
             android:textSize="18sp"
-            android:hint="Add a description (e.g., the maple tree in the front yard on the corner of Madison and Portsmouth"
+            android:hint="Add a detailed description of the location"
             android:textColorHint="@color/primary_text"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
