add new item to nav drawer menu to get to original main activity and remove all of the string extras in the intents in mainactvitys onNavigationItemSelected override

--- a/app/src/main/res/menu/activity_main_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer_drawer.xml
@@ -8,6 +8,10 @@
             android:title="Logout"
             />
         <item
+            android:id="@+id/action_viewAvailableReports"
+            android:title="View Available Swarm Reports"
+            />
+        <item
             android:id="@+id/action_newReport"
             android:title="Report A Swarm"
             />
@@ -19,6 +23,7 @@
             android:id="@+id/action_myReportedSwarms"
             android:title="View My Reported Swarms"
             />
+
     </group>
 
 </menu>
