remove clearNode call in mainActivity (not yet thoroughly tested), add and remove some known issues from the README, and rename the main activity link in the nav drawer

--- a/app/src/main/res/menu/activity_main_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer_drawer.xml
@@ -5,7 +5,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/action_viewAvailableReports"
-            android:title="View Available Swarm Reports"
+            android:title="View Unclaimed Swarm Reports"
             />
         <item
             android:id="@+id/action_newReport"
